--- a/hw/hw2_practiceAssignment.Rmd
+++ b/hw/hw2_practiceAssignment.Rmd
@@ -295,7 +295,8 @@ str(tmp)
 What we just did was read in each of the csv files and place them inside of our list.  Now we have a list of 5 elements called `tmp`, where each element of the list is a data frame containing one of the csv files.  It just so happens that what we just did is functionally identical to using `lapply`.
 
 ```{r}
-str(lapply(files_full, read.csv))
+temp <- lapply(files_full, read.csv)
+str(temp)
 ```
 
 This is part of the power of the apply family of functions.  You don't have to worry about the "housekeeping" of looping, and instead you can focus on the function you're using.  When you or somebody else comes back weeks later and reads through your code, it's easier to understand what you were doing and why.  If somebody says that the apply functions are more "expressive", this is what they mean.
@@ -310,7 +311,7 @@ head(tmp[[1]][,"Day"])
 We can use a function called `do.call()` to combine `tmp` into a single data frame. `do.call` lets you specify a function and then passes a list as if each element of the list were an argument to the function. The syntax is `do.call(function_you_want_to_use, list_of_arguments)`. In our case, we want to `rbind()` our list of data frames, `tmp`.
 
 ```{r}
-output <- do.call(rbind, tmp)
+output <- do.call(rbind, temp)
 str(output)
 ```
 
