--- a/DS_JohnsHopkins/Getting_cleaning_data.Rmd
+++ b/DS_JohnsHopkins/Getting_cleaning_data.Rmd
@@ -345,3 +345,239 @@ See the help page for more details: http://cran.r-project.org/web/packages/forei
 
 ## Subsetting and sorting
 
+Review:
+```{r}
+set.seed(13435)
+X <- data.frame("var1"=sample(1:5), "var2"=sample(6:10), "var3"=sample(11:15))
+X <- X[sample(1:5),]
+X$var2[c(1,3)] = NA
+
+# Logical: AND and OR
+X[X$var1 >= 3 & X$var3 > 11,]
+X[X$var1 >= 3 | X$var3 > 11,]
+
+```
+
+
+The `which()` function gives the TRUE indices of a logical object. The presence of NA values in var2 will cause issues when indexing as before, but using `which()` will ignore the NA values.
+
+```{r}
+X[X$var2 > 8,]
+X[which(X$var2 > 8),] # ingores indices with NA values
+```
+
+
+`sort()` will sort vectors and can be applied to sort single columns (variables) of a data frame. 
+`order()` will order the entire data
+
+Similarily, the `arrange()` function from the *plyr* package will reorder a data frame by its columns
+
+Adding rows and columns with `cbind()` and `rbind()`:
+
+```{r}
+# create a duplicate of the X df to see if following operations copy or mutate 
+X_orig <- X  
+X$var4 <- rnorm(5)
+
+# a new df is created and reassigned to X because X_orig did not change
+X   
+X_orig
+
+X <- cbind(X, var5=rnorm(5))
+```
+
+
+## Summarizing Data
+
+`head()`
+`tail()`
+`summary()` will give some information about every variable
+`str()` gives info on the structure of the data frame
+`quantile()` look at variability in quantitative variables
+`table()` use the argument `useNA = "ifany"` to count the number of missing values as well
+
+```{r}
+summary(X)
+str(X)
+quantile(X$var5)
+
+table(X$var2, useNA = "ifany")
+
+```
+
+
+`is.na()`
+`sum()`
+`any()`
+`all()`
+`colSums()`
+
+```{r}
+sum(is.na(X$var2))  # how many NA values?
+any(is.na(X$var2))  # are there any missing values?
+all(X$var5 > 0)     # are all values in var5 greater than 0?
+colSums(is.na(X))   # test how many NA values are in each column
+```
+
+`%in%` returns a logical vector indicating if there is a match or not for its left operand
+
+```{r}
+table(X$var1 %in% c("1"))
+X[X$var2 %in% c("7")]
+```
+
+Cross tabs
+`xtab()` creates a contingency table from cross-classifying factors in a df
+
+```{r}
+data("UCBAdmissions")
+df <- as.data.frame(UCBAdmissions)
+summary(df)
+
+xt <- xtabs(Freq ~ Gender + Admit, data = df)
+xt
+```
+
+Size of a data set
+`object.size()`
+
+```{r}
+fakeData <- rnorm(1e5)
+object.size(fakeData)
+
+print(object.size(fakeData),units = "Mb")
+```
+
+## Creating new variables
+
+*Common transformations*
+`abs(x)` absolute value
+`sqrt(x)` square root
+`ceiling(x)` round value up to next whole number, so ceiling(3.1) is 4
+`floor(x)` round value down to next whole number, so floor (3.9) is 3
+`round(x, digits=n)` rounds to n digits, round(3.457, digits=2) is 3.46
+`signif(x, digits=n)`: signif(3.475,digits=3) is 3.5
+`cos(x)`, sin(x), etc.
+`log(x)`: natural logarithm
+`log2(x)`, log10(x): other common logarithms
+`exp(x)`: exponentiating x
+
+See **Hmisc** package for cutting (cut2)
+
+## Reshaping Data
+
+First load the `reshape2` package
+`melt()`
+`dcast()`
+
+```{r}
+library(reshape2)
+
+```
+
+
+## dplyr Tidyverse Package 
+The tidyverse enhanses data frames with **tibbles** for ease of analysis.
+
+Advantages of Tibbles:
+* All Tidyverse packages support tibbles  
+    + makes it easy to string together functions from different Tidyverse packages without intermediate data conversions  
+* Tibbles print in a cleaner format than data frames
+* Tibble creation functions make fewer assumptions about your data
+    + e.g. doesn't assume all character vectors are factors (usually overriden)
+    + does not mess with variable or row names either
+
+
+The dplyr package assumes tidy data  
+For all dplyr functions:
+* First argument is a data frame
+* Subsequent arguments describe what to do with it
+    + can refer to column namess directly without needing to use $
+* result is a new data frame
+
+`select()`
+`filter()`
+`arrange()`
+`rename()`
+`mutate()`
+`summarise()`
+`group_by()`
+`%>%` pipeline operator
+
+```{r}
+library(dplyr)
+
+starwars
+dim(starwars)
+class(starwars)
+names(starwars)
+
+select(starwars, name, homeworld:starships)
+select(starwars, -(height:gender))  # all but (exclude) vars in this range
+filter(starwars, homeworld=="Tatooine")
+arrange(filter(starwars, homeworld=="Tatooine"), species)
+
+
+starwars %>%
+select(-(hair_color:gender),-(films:starships)) %>%
+filter(homeworld=="Tatooine") %>%
+arrange(desc(species))
+
+```
+
+## Merging Data sets
+
+
+# Week 4
+
+## Editing text variables
+
+`tolower()`
+`srtsplit()`
+`sub()` and `gsub()` (sub just replaces the first instance)
+`grep()` and `grepl()`
+`nchar()`
+`substr()`
+`paste()` and `paste0()`
+`str_trim()`
+
+Text in data sets:  
+* Names of variables should be
+    + all lowercase when possible
+    + descriptive
+    + unique
+    + free of underscores, dots, or white spaces
+* Variables with character values
+    + usually should be factor variables
+    + descriptive names (instead of 0 and 1 etc.)
+
+## Regular Expressions
+
+Think of regular expressions as a combination of literals (words) and metacharacters
+metacharacters are ways to express:
+* whitespace word boundaries
+* beginning and end of the line
+* sets of literals
+* alternatives ("war" or "peace")
+
+^      represents the beginning of the line
+$      represents the end of the line
+[]     any set of characters
+[^]    match any characters not in the indicated classes
+.      any possible character
+|      "OR" combines two expressions (subexpressions called *alternatives*)
+()?    indicated expression is optional
+*      repeat any number of times (including none)
++      at least one of the item
+{m,n}  Interval qualifier, specify the min(m) and max(n) number of matches
+{m}    Exactly m matches
+{m,}   at least m matches
+
+**Examples**
+^i think == start of a line begins with "i think"
+morning$ == "morning" at end of the line
+[0-9][a-zA-Z]  == any number followed by any leter Capitalzed or lowercase
+[^?.]$  ==  Line that ends in anything other than period or question mark
+[Gg]eorge( [Ww]\.)? [Bb]ush == george bush capitalized or lc w/ or w/o "W."
+(.*) == find anything in parens (anything, any number of times)
+[Bb]ush( +[^ ]+ +){1,5} debate == bush and debate separated by 1-5 words
