Completed lab for week 3 of Intro to Probability and Data with R

--- a/Statistics-with-R/01_Intro-Probability/Week3_Coursera_probability.Rmd
+++ b/Statistics-with-R/01_Intro-Probability/Week3_Coursera_probability.Rmd
@@ -245,7 +245,7 @@ we need to align both their shooting percentage and the number of attempted shot
 </div>
 ```{r}
 # type your code for the Exercise here, and Knit
-
+sim_basket <- sample(shot_outcomes, size = 133, replace = TRUE, prob = c(0.45,0.55))
 ```
 
    
@@ -269,7 +269,7 @@ a hot hand.
 </div>
 ```{r sim-streak-lengths}
 # type your code for the Exercise here, and Knit
-
+sim_streak <- calc_streak(sim_basket)
 ```
    
 <div id="exercise">
@@ -277,7 +277,8 @@ a hot hand.
 </div>
 ```{r plot-sim-streaks}
 # type your code for the Exercise here, and Knit
-
+ggplot(data = sim_streak, aes(x = length)) +
+    geom_histogram(binwidth = 1)
 ```
 
 4.  If you were to run the simulation of the independent shooter a second time, how 
